--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>{{ _('Not Found') }}</h1>
-    <p><a href="{{ url_for('main.index') }}">{{ _('Back') }}</a></p>
+    <h1>{{ _('Не найдено') }}</h1>
+    <p><a href="{{ url_for('main.index') }}">{{ _('Назад') }}</a></p>
 {% endblock %}
